<resources>
    <string name="app_name">Gerenciamento de convidado</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Fechar menu</string>

    <string name="condiguracao">Configurações</string>


    <string name="ausentes">Ausentes</string>
    <string name="presentes">Presentes</string>
    <string name="todos">Todos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome">Nome</string>
    <string name="nao_confimado">Não Confimado</string>
    <string name="salvar">SALVAR</string>
    <string name="nome_obrigatorio">Nome é obrigatório</string>
    <string name="salvo_com_sucesso">Salvo com sucesso</string>
    <string name="erro_ao_salvar">Algo de errado aconteceu</string>
    <string name="remocao_convidado">Remoção de convidado</string>
    <string name="deseja_remover">Deseja remover o convidado?</string>
    <string name="total">Total</string>
    <string name="removido_com_sucesso">Convidado removido com sucesso</string>
    <string name="documento">Documento</string>
    <string name="confirmacao">confirmação</string>
</resources>
